# Hercules

./: .gitignore  README.md  build-ios.sh
HerculesApp/: project.yml
HerculesApp/HerculesApp/: AboutView.swift  AppDelegate.swift  ContentView.swift  HerculesApp.swift  Info.plist  NetworkPolicy.swift  NodeActivityAttributes.swift  NotificationHistory.swift  NotificationManager.swift  SettingsView.swift  SharedNodeState.swift  SnapshotDownloader.swift
HerculesApp/HerculesApp.xcodeproj/: project.pbxproj
HerculesApp/HerculesApp/Assets.xcassets/AccentColor.colorset/: Contents.json
HerculesApp/HerculesApp/Assets.xcassets/Background.colorset/: Contents.json
HerculesApp/HerculesWidget/: HerculesWidget.entitlements  HerculesWidget.swift  Info.plist
hercules-core/: Cargo.toml  build.rs
hercules-core/patches/bitcoinconsensus/: .cargo_vcs_info.json  Cargo.toml  build.rs
hercules-core/src/: assumeutxo.rs  block_store.rs  block_validation.rs  hercules.udl  lib.rs  mempool.rs  p2p.rs  peer_pool.rs  peer_store.rs  relay_policy.rs  store.rs  sync.rs  tor.rs  tor_v3.rs  utxo.rs  validation.rs  wallet_rpc.rs
hercules-core/tests/: convert_snapshot_test.rs
server/: README.md  template.yaml
server/notify/: index.js
server/register/: index.js
tickets/: 001-multi-peer-eclipse-protection.md  002-utreexo-compact-utxo.md  005-lmdb-utxo-backend.md  006-reorg-handling.md  007-peer-reputation.md  011-address-manager.md  012-tor-routed-snapshot-download.md  014-wallet-tor-onion-api.md  019-relay-deployment.md  020-in-app-wallet.md  021-quantum-safe-pubkey-indicator.md
tickets/completed/: 001-multi-peer-eclipse-protection.md  004-phase2-pruned-validating-node.md  007-peer-reputation.md  008-fully-participating-node.md  009-rbf-mempool.md  010-cpfp-ancestor-tracking.md  011-address-manager.md  013-live-activity-and-cellular-policy.md  015-offline-catch-up.md  016-header-tip-cross-check-and-peer-fanout.md  017-strengthen-assumeutxo-trust-model.md  018-knots-mempool-policy.md
tickets/future/: 003-cooperative-historical-validation.md
