[package]
name = "hercules-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]
name = "hercules_core"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
hex = "0.4"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
