[package]
name = "hercules-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]
name = "hercules_core"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
bitcoin = { version = "0.32", features = ["serde", "bitcoinconsensus"] }
bitcoinconsensus = "0.105"
hex = "0.4"
sha2 = "0.10"
flate2 = "1.0"
rusqlite = { version = "0.36", features = ["bundled"] }
heed = "0.20"
log = "0.4"
thiserror = "1.0"
arti-client = { version = "0.41", default-features = false, features = [
    "tokio", "rustls", "onion-service-client", "onion-service-service", "compression"
] }
tor-rtcompat = { version = "0.41", features = ["tokio"] }
tor-cell = "0.41"
tokio = { version = "1", features = ["rt-multi-thread", "time", "io-util"] }
tokio-stream = "0.1"
safelog = "0.8"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "convert_snapshot"
path = "src/bin/convert_snapshot.rs"
